k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sca-net: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: micheledinelli/backend:latest
          name: backend
          ports:
            - containerPort: 8888
          resources: {}
          volumeMounts:
            - mountPath: /etc/data
              name: fingerprint-data
      restartPolicy: Always
      volumes:
        - name: fingerprint-data
          persistentVolumeClaim:
            claimName: fingerprint-data
status: {}
