k8s/sca-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sca-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sca-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sca-net: "true"
